syntax = "proto3";

package user;

option go_package = "github.com/kaolnwza/muniverse/user/internal/adapters/grpc/proto/pb";

message UserRequest {
  string uuid = 1;
}

message UserResponse {
    string uuid = 1;
    string display_name = 2;
    string birthday = 3;
    string description = 4;
    string tel_number = 5;
    string email = 6;
    string role = 7;
    string profile_picture_url = 8;
}

message UserWithoutImgResponse {
    string uuid = 1;
    string display_name = 2;
    string birthday = 3;
    string description = 4;
    string tel_number = 5;
    string email = 6;
    string role = 7;

}

message CreateUserRequest {
  string display_name = 2;
  string birthday = 3;
  string description = 4;
  string tel_number = 5;
}

message CreateUserResponse {
  string uuid = 1;
  string display_name = 2;
  string birthday = 3;
  string description = 4;
  string tel_number = 5;
}


service UserService {
  rpc GetUserByUUID(UserRequest) returns (UserResponse);
  rpc GetUserWithoutImgByUUID(UserRequest) returns (UserWithoutImgResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
};

